Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,9 @@ img:nth-child(even) {
 @media only screen and (min-width: 25em) {
 
   img {
-    float:left;
+    float: left;
     width: 50%;
-    padding: .2em;
+    padding: .1em;
   }
 
   img:nth-child(even) {
@@ -69,7 +69,5 @@ img:nth-child(even) {
 
   img:nth-child(1) {
     display: inline;
-    }
   }
-
 }
